// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events Component should render properly - if no events 1`] = `
<Events
  events={Array []}
>
  <div>
    Not found!
  </div>
</Events>
`;

exports[`Events Component should render properly - with filters 1`] = `
<Events
  events={
    Array [
      Object {
        "id": "123",
        "properties": Object {
          "maagType": "foo",
          "mag": "1",
          "place": "iAmAPlace",
        },
      },
      Object {
        "id": "321",
        "properties": Object {
          "maagType": "bar",
          "mag": "01",
          "place": "foobar",
        },
      },
    ]
  }
>
  <StyledTable>
    <table
      className="css-14kxgak-StyledTable e1oqn710"
    >
      <thead>
        <tr>
          <th>
            Id
          </th>
          <th>
            Place
          </th>
          <th>
            Mag
          </th>
          <th>
            MagType
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="321"
        >
          <td>
            <span>
              321
            </span>
          </td>
          <td>
            foobar
          </td>
          <td>
            01
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </StyledTable>
</Events>
`;

exports[`Events Component should render properly 1`] = `
<Events
  events={
    Array [
      Object {
        "id": "123",
        "properties": Object {
          "maagType": "foo",
          "mag": "1",
          "place": "iAmAPlace",
        },
      },
      Object {
        "id": "321",
        "properties": Object {
          "maagType": "bar",
          "mag": "01",
          "place": "foobar",
        },
      },
    ]
  }
>
  <StyledTable>
    <table
      className="css-14kxgak-StyledTable e1oqn710"
    >
      <thead>
        <tr>
          <th>
            Id
          </th>
          <th>
            Place
          </th>
          <th>
            Mag
          </th>
          <th>
            MagType
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="123"
        >
          <td>
            <span>
              123
            </span>
          </td>
          <td>
            iAmAPlace
          </td>
          <td>
            1
          </td>
          <td />
        </tr>
        <tr
          key="321"
        >
          <td>
            <span>
              321
            </span>
          </td>
          <td>
            foobar
          </td>
          <td>
            01
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </StyledTable>
</Events>
`;
